# friends-memory-timeline

./: README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: auth.py  events.py  router.py
backend/app/db/: session.py
backend/app/models/: audit_log.py  edit_log.py  event.py
backend/app/routers/: audit.py  events.py  health.py
backend/app/schemas/: audit_log.py  auth.py  event.py
backend/app/services/: audit_service.py  auth_service.py  event_service.py
backend/tests/: conftest.py  test_auth.py  test_events.py
backend/tests/integration/: test_audit.py  test_events.py  test_health.py
backend/tests/unit/: test_auth_service.py  test_event_service.py
e2e/: playwright.config.ts  smoke.spec.ts
frontend/: Dockerfile  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/timeline/: layout.tsx  page.tsx
frontend/components/auth/: PasswordForm.tsx
frontend/components/event/: DeleteConfirmation.tsx  EventForm.tsx  EventFormFields.tsx  PhotoUpload.tsx
frontend/components/layout/: Header.tsx  LoadingState.tsx
frontend/components/timeline/: EmptyTimeline.tsx  Timeline.tsx  TimelineCard.tsx  TimelineList.tsx
frontend/components/ui/: alert-dialog.tsx  dialog.tsx  spinner.tsx
frontend/hooks/: useAuth.ts  useEvents.ts  useTimelineTheme.ts
frontend/lib/: api.ts  auth.ts  types.ts  utils.ts
frontend/styles/: globals.css
